--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PWS</title>
 </head>
+<style>
+    body
+    {
+        padding: 0;
+        margin:  0;
+    }
+    .container
+    {
+        margin: 0 auto;
+        padding: 5vh;
+        padding-left: 10vw;
+        padding-right: 10vw;
+        
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+    }
+</style>
 <body>
-    Hallo
+    <div class="container">
+        Hallo
+    </div>
 </body>
 </html>
