--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PWS</title>
 </head>
 <style>
-    html{
+    html {
         scroll-behavior: smooth;
     }
 
@@ -28,13 +28,13 @@
     p {
         text-align: justify;
     }
-    a 
-    {
+
+    a {
         text-decoration: none;
-        color:indigo;
+        color: indigo;
     }
-    a:hover
-    {
+
+    a:hover {
         text-decoration: underline;
     }
 
@@ -47,28 +47,32 @@
         text-align: center;
     }
 
-    h3 {
+    h3 {}
 
-    }
-    nav{
+    nav {
         line-height: 150%;
     }
-    nav ul
-    {
+
+    nav ul {
         padding-left: 1.2em;
     }
-    hr{
+
+    hr {
         background-color: black;
         border-radius: 10px;
         height: 0.1em;
         border: 0;
     }
-    audio
-    {
+
+    audio {
+        padding: 0;
         padding-top: 1em;
         width: 100%;
     }
-    
+
+    .audio_tekst {
+        text-align: center;
+    }
 </style>
 
 <body>
@@ -85,11 +89,12 @@
                     <a href="#HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
                         <li><a href="">Is het compositie proces veranderd door nieuwe technologie?</a></li>
-                        <li><a href="">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</a>
+                        <li><a href="">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
+                                filmmuziek?</a>
                         </li>
                     </ul>
                 </li>
-    
+
                 <li>
                     <a href="">Hoe kan je emoties beïnvloeden met muziek in film?</a>
                     <ul>
@@ -101,6 +106,7 @@
                 <li><a href="">Hoe verschilt de filmmuziek in verschillende filmgenres?</a></li>
                 <li><a href="">Conclusie</a></li>
                 <li><a href="">Bronnen</a></li>
+                <li><a href="">Logboek</a></li>
             </ul>
         </nav>
         <hr>
@@ -152,10 +158,22 @@
             interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
             urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
             vitae vehicula magna, sed sagittis urna.
-            <br>
-            <audio controls src=""></audio>
-            Audio fragment psycho
         </p>
+        <audio controls src=""></audio>
+        <div class="audio_tekst">Geluidsfragment uit Psycho 1966</div>
+        <hr>
+        <h3 id="LOGBOEK">Logboek</h3>
+        <p>
+            1,0 uur orienteren met Vincent <br>
+            0,5 uur gesprek met toa met zwarte baard <br>
+            0,5 uur gesprek met Martijn breebaart <br>
+            0,5 uur gesprek met Desiree Ceulemans <br>
+            1,0 uur werken aan plan van aanpak
+            1,0 uur werken aan plan van aanpak
+            1,0 uur bronnen zoeken, bekijken en lezen
+        </p>
+        <hr>
     </main>
 </body>
+
 </html>
