--- a/index.html
+++ b/index.html
@@ -4,91 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>PWS</title>
 </head>
-<style>
-    html {
-        scroll-behavior: smooth;
-    }
 
-    body {
-        padding: 0;
-        margin: 0;
-    }
-
-    main {
-        margin: 0 auto;
-        padding: 5vh;
-        padding-left: 20vw;
-        padding-right: 20vw;
-
-        background-color: white;
-    }
-
-    p {
-        text-align: justify;
-    }
-
-    a {
-        text-decoration: none;
-        color: indigo;
-    }
-
-    a:hover {
-        text-decoration: underline;
-    }
-
-    h1 {
-        font-size: 3em;
-        text-align: center;
-    }
-
-    h2 {
-        text-align: center;
-    }
-
-    h3 {}
-
-    nav {
-        line-height: 150%;
-    }
-
-    nav ul {
-        padding-left: 1.2em;
-    }
-
-    hr {
-        background-color: black;
-        border-radius: 10px;
-        height: 0.1em;
-        border: 0;
-    }
-
-    audio {
-        padding: 0;
-        padding-top: 1em;
-        width: 100%;
-    }
-
-    .audio_tekst {
-        text-align: center;
-    }
-</style>
 
 <body>
     <main>
         <h1>Profiel Werkstuk</h1>
-        <h2>Liam Creed <br> <span style="font-size: 80%;"> 6vwo 2024</span></h2>
+        <h2>Liam Creed</h2>
+        <h3>6vwo 2024</h3>
         <hr>
         <h2>Hoe kan je een film beïnvloeden met muziek?</h2>
-        <h3>Inhoud</h3>
+        <hr>
+        <h3 style="text-align:left">Inhoud</h3>
         <nav>
             <ul>
                 <li><a href="#INLEIDING">Inleiding</a></li>
                 <li>
                     <a href="#HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
-                        <li><a href="">Is het compositie proces veranderd door nieuwe technologie?</a></li>
+                        <li><a href="#IHCPVDNT">Is het compositie proces veranderd door nieuwe technologie?</a></li>
                         <li><a href="">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
                                 filmmuziek?</a>
                         </li>
@@ -131,7 +67,9 @@
             pharetra diam, eget cursus risus efficitur quis. Pellentesque faucibus, diam et pharetra ullamcorper, nulla
             massa tempus nulla, a feugiat diam felis at est.
         </p>
+
         <hr>
+
         <h3 id="HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</h3>
         <p>
             Etiam sit amet varius nisl. Fusce in cursus tortor. In hac habitasse platea dictumst. Suspendisse faucibus
@@ -143,6 +81,7 @@
             sollicitudin, mattis magna sit amet, feugiat diam.
         </p>
         <p>
+            <h5>Nam lacinia sit amet orci vulputate rutru</h5>
             Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis sit
             amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio, accumsan
             non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
@@ -152,6 +91,7 @@
             pulvinar ac lorem id, congue venenatis metus.
 
         </p>
+        <h4 id="IHCPVDNT">Is het compositie process veranderd door nieuwe technologie?</h4>
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
@@ -160,17 +100,26 @@
             vitae vehicula magna, sed sagittis urna.
         </p>
         <audio controls src=""></audio>
-        <div class="audio_tekst">Geluidsfragment uit Psycho 1966</div>
+        <div class="audio_tekst">Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
         <hr>
+
+
+
+
+
+
+        
         <h3 id="LOGBOEK">Logboek</h3>
         <p>
-            1,0 uur orienteren met Vincent <br>
-            0,5 uur gesprek met toa met zwarte baard <br>
-            0,5 uur gesprek met Martijn breebaart <br>
-            0,5 uur gesprek met Desiree Ceulemans <br>
-            1,0 uur werken aan plan van aanpak
-            1,0 uur werken aan plan van aanpak
-            1,0 uur bronnen zoeken, bekijken en lezen
+            <span style="font-weight: bold;">Week 36:</span> 2 uur orienteren met Vincent <br>
+            <span style="font-weight: bold;">Week 36:</span> 1 uur orientatie opdracht maken<br>
+            <span style="font-weight: bold;">Week 36:</span> 30 minuten gesprek met toa met zwarte baard <br>
+            <span style="font-weight: bold;">Week 38:</span> 30 minuten gesprek met Martijn breebaart <br>
+            <span style="font-weight: bold;">Week 39:</span> 30 minuten gesprek met Desiree Ceulemans <br>
+            <span style="font-weight: bold;">Week 39:</span> 2 uur werken aan plan van aanpak <br>
+            <span style="font-weight: bold;">Week 39:</span> 1 uur bronnen zoeken, bekijken en lezen <br>
+            <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
+            <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
         </p>
         <hr>
     </main>
