--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>PWS</title>
+    <meta name="revised" content="01/01/2024">
 </head>
 
 
@@ -13,7 +14,7 @@
     <main>
         <h1>Profiel Werkstuk</h1>
         <h2>Liam Creed</h2>
-        <h3>6vwo 2024</h3>
+        <h3 style="text-align: center;">6vwo 2024</h3>
         <hr>
         <h2>Hoe kan je een film beïnvloeden met muziek?</h2>
         <hr>
@@ -25,72 +26,58 @@
                     <a href="#HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
                         <li><a href="#IHCPVDNT">Is het compositie proces veranderd door nieuwe technologie?</a></li>
-                        <li><a href="">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
+                        <li><a href="#WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
                                 filmmuziek?</a>
                         </li>
+                        <li><a href="#HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende filmgenres?</a></li>
                     </ul>
                 </li>
-
                 <li>
-                    <a href="">Hoe kan je emoties beïnvloeden met muziek in film?</a>
+                    <a href="#HKJEBMMIF">Hoe kan je emoties beïnvloeden met muziek in film?</a>
                     <ul>
-                        <li><a href="">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
-                        <li><a href="">Hoe kan je deze emoties creëren met muziek in film?</a></li>
-                        <li><a href="">Kan de onderliggende filmmuziek een scene anders laten voelen?</a></li>
+                        <li><a href="#WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
+                        <li><a href="#HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</a></li>
+                        <li><a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a></li>
                     </ul>
                 </li>
-                <li><a href="">Hoe verschilt de filmmuziek in verschillende filmgenres?</a></li>
-                <li><a href="">Conclusie</a></li>
-                <li><a href="">Bronnen</a></li>
-                <li><a href="">Logboek</a></li>
+                <li><a href="#CONCLUSIE">Conclusie</a></li>
+                <li><a href="#BRONNEN">Bronnen</a></li>
+                <li><a href="#LOGBOEK">Logboek</a></li>
             </ul>
         </nav>
+
         <hr>
+
         <h3 id="INLEIDING">Inleiding</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi vitae sapien mattis scelerisque.
             Curabitur mattis nisi eget velit facilisis sagittis. Fusce magna magna, hendrerit non luctus at, dapibus
             dapibus magna. Aenean semper magna at est congue convallis. Cras eleifend ultricies lacus, at sodales mi
-            elementum a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec
-            sed massa dapibus, molestie diam sed, tincidunt felis. Etiam aliquet felis lectus, at bibendum est aliquet
+            elementum a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
+            Donec
+            sed massa dapibus, molestie diam sed, tincidunt felis. Etiam aliquet felis lectus, at bibendum est
+            aliquet
             sit amet. Fusce ut ipsum scelerisque, tristique nunc vitae, dignissim nulla. Pellentesque ipsum magna,
             consequat id commodo id, vestibulum in odio. Vivamus ut fringilla lectus. Maecenas facilisis, ex eget
             consequat dignissim, neque urna tincidunt diam, eu malesuada felis massa sit amet nunc.
-        </p>
-        <p>
-            Suspendisse potenti. Aenean pulvinar ex sit amet sapien ullamcorper, eu tempor sem commodo. Cras consectetur
-            varius felis quis laoreet. Etiam non massa dui. Donec ac metus augue. Donec erat eros, bibendum vitae augue
-            viverra, malesuada hendrerit tellus. Sed id quam eget odio vulputate imperdiet. Phasellus volutpat sagittis
-            augue. Morbi varius facilisis ex, quis tincidunt leo dictum vitae. In sem massa, eleifend quis pharetra et,
-            efficitur ac mauris. Duis ut dolor malesuada tellus venenatis pulvinar. Donec dapibus cursus tincidunt.
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam aliquet
-            pharetra diam, eget cursus risus efficitur quis. Pellentesque faucibus, diam et pharetra ullamcorper, nulla
-            massa tempus nulla, a feugiat diam felis at est.
         </p>
 
         <hr>
 
         <h3 id="HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</h3>
         <p>
-            Etiam sit amet varius nisl. Fusce in cursus tortor. In hac habitasse platea dictumst. Suspendisse faucibus
+            Etiam sit amet varius nisl. Fusce in cursus tortor. In hac habitasse platea dictumst. Suspendisse
+            faucibus
             aliquam aliquet. Mauris pulvinar congue lectus, eget tincidunt nisl. Sed id mauris nec ante tincidunt
             euismod. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec maximus massa a elit
-            pellentesque imperdiet. Etiam non gravida dolor, pellentesque mollis nisi. Pellentesque ac maximus lectus.
-            Curabitur ultricies ac orci eu varius. Praesent vitae eros nibh. Vestibulum ante ipsum primis in faucibus
+            pellentesque imperdiet. Etiam non gravida dolor, pellentesque mollis nisi. Pellentesque ac maximus
+            lectus.
+            Curabitur ultricies ac orci eu varius. Praesent vitae eros nibh. Vestibulum ante ipsum primis in
+            faucibus
             orci luctus et ultrices posuere cubilia curae; Suspendisse ornare viverra mattis. In sollicitudin leo
             sollicitudin, mattis magna sit amet, feugiat diam.
         </p>
         <p>
-            <h5>Nam lacinia sit amet orci vulputate rutru</h5>
-            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis sit
-            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio, accumsan
-            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
-            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
-            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat rhoncus.
-            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
-            pulvinar ac lorem id, congue venenatis metus.
-
-        </p>
         <h4 id="IHCPVDNT">Is het compositie process veranderd door nieuwe technologie?</h4>
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
@@ -101,14 +88,190 @@
         </p>
         <audio controls src=""></audio>
         <div class="audio_tekst">Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+        <p>
+            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
+            sit
+            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
+            accumsan
+            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
+            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
+            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat
+            rhoncus.
+            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
+            pulvinar ac lorem id, congue venenatis metus.
+        </p>
+        <h4 id="HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende filmgenres?</h4>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+        </p>
+        <p>
+            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis sit
+            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio, accumsan
+            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
+            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
+            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat rhoncus.
+            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
+            pulvinar ac lorem id, congue venenatis metus.
+        </p>
+
+        <h4 id="WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</h4>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+        </p>
+        <p>
+            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
+            sit
+            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
+            accumsan
+            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
+            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
+            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat
+            rhoncus.
+            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
+            pulvinar ac lorem id, congue venenatis metus.
+        </p>
+
         <hr>
 
+        <h3 id="HKJEBMMIF">Hoe kan je emoties beïnvloeden met muziek in film?</h3>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+        </p>
+        <h4 id="WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</h4>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit.
+            <br>
+            <br>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit.
+            <br>
+            <br>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit.
+        </p>
 
+        </p>
+        <h4 id="HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</h4>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+            <br>
+            <br>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+            <br>
+            <br>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+        </p>
+        <h4 id="KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</h4>
+        <p>
+            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
+            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
+            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
+            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
+            vitae vehicula magna, sed sagittis urna.
+        </p>
 
+        <hr>
 
+        <h3 id="CONCLUSIE">Conclusie</h3>
+        <p>
+            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
+            sit
+            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
+            accumsan
+            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
+            ullamcorper turpis.
+        </p>
 
+        <hr>
 
-        
+        <h3 id="BRONNEN">Bronnen</h3>
+        <p>
+            <span style="font-weight: bold;">Films:</span> <br>
+            Interstellar – Hans Zimmer <br>
+            Dunkirk – Hanz Zimmer<br>
+            Dune – Hans Zimmer <br>
+            Halloween – John Carpenter <br>
+            Tron – Wendy Carlos <br>
+            The Shining – Wendy Carlos & Rachel Elkind <br>
+            Tenet – Ludwig Goransson <br>
+            Oppenheimer – Ludwig Goransson <br>
+            Blade Runner – Vangelis <br>
+            Blade Runner 2049 - Hans Zimmer <br>
+            La la land – Justin Hurwitz <br>
+            Schindler’s List – John Williams <br>
+            Taxi Driver – Bernard Hermann <br>
+            Lord of the Rings – Howard Shore <br>
+            Once Upon a Time in the West – Ennio Morricone <br>
+            Amélie – Yann Tiersen <br>
+            Princess Mononoke – Joe Hisaishi <br>
+        </p>
+        <p style="font-style: italic;">
+            <a href="">Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes</a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">Native Instruments. (2021, April 13).
+                Alan Silvestri
+                Breaks Down the Composing Workflow Behind his
+                Blockbuster Scores | Native Instruments [Video]. YouTube.</a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">Mix with the Masters. (2020, July 17).
+                Writing to
+                picture with Hans Zimmer [Video]. YouTube.</a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=Ib4BHU0J-dA" target="_blank">Collider Interviews. (2023, July 28).
+                Oppenheimer
+                Interview: Composer Ludwig Göransson [Video]. YouTube.</a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
+                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores |
+                Critical breakthroughs [Video]. YouTube.
+            </a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">Variety. (2020, August 13). How “The
+                Mandalorian”
+                Score Found The New “Star Wars” Sound [Video]. YouTube.</a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">Vanity Fair. (2022, March 17). How
+                “Dune” composer
+                Hans Zimmer created the Oscar-Winning score | Vanity
+                Fair[Video]. YouTube. </a>
+            <br>
+        </p>
+        <hr>
+
         <h3 id="LOGBOEK">Logboek</h3>
         <p>
             <span style="font-weight: bold;">Week 36:</span> 2 uur orienteren met Vincent <br>
@@ -119,9 +282,13 @@
             <span style="font-weight: bold;">Week 39:</span> 2 uur werken aan plan van aanpak <br>
             <span style="font-weight: bold;">Week 39:</span> 1 uur bronnen zoeken, bekijken en lezen <br>
             <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
+            <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
         </p>
         <hr>
+        <p>
+            <a href="github.com"></a>
+        </p>
     </main>
 </body>
 
