--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         <li><a href="#WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
                                 filmmuziek?</a>
                         </li>
-                        <li><a href="#HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende filmgenres?</a></li>
+                        <li><a href="#HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende
+                                filmgenres?</a></li>
                     </ul>
                 </li>
                 <li>
@@ -37,10 +38,12 @@
                     <ul>
                         <li><a href="#WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
                         <li><a href="#HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</a></li>
-                        <li><a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a></li>
+                        <li><a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="#CONCLUSIE">Conclusie</a></li>
+                <li><a href="#MUZIEK">Muziek</a></li>
                 <li><a href="#BRONNEN">Bronnen</a></li>
                 <li><a href="#LOGBOEK">Logboek</a></li>
             </ul>
@@ -86,8 +89,7 @@
             urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
             vitae vehicula magna, sed sagittis urna.
         </p>
-        <audio controls src=""></audio>
-        <div class="audio_tekst">Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+
         <p>
             Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
             sit
@@ -151,16 +153,19 @@
         </p>
         <h4 id="WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</h4>
         <p>
+            <span style="font-weight: bolder;">Blijdschap</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
             <br>
             <br>
+            <span style="font-weight: bolder;">Verdriet</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
             <br>
             <br>
+            <span style="font-weight: bolder;">Spanning en Angst</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
@@ -169,25 +174,22 @@
         </p>
         <h4 id="HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</h4>
         <p>
+            <span style="font-weight: bolder;">Blijdschap</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
+            interdum quam hendrerit.
             <br>
             <br>
+            <span style="font-weight: bolder;">Verdriet</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
+            interdum quam hendrerit.
             <br>
             <br>
+            <span style="font-weight: bolder;">Spanning en Angst</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
+            interdum quam hendrerit.
         </p>
         <h4 id="KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</h4>
         <p>
@@ -270,6 +272,22 @@
                 Fair[Video]. YouTube. </a>
             <br>
         </p>
+
+        <hr>
+
+        <h3 id="MUZIEK">Muziek</h3>
+        <p>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+            </div>
+            <br>
+            <div class="audio_bijlage">
+                <audio controls src=""></audio>
+                <div>Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+            </div>
+        </p>
+
         <hr>
 
         <h3 id="LOGBOEK">Logboek</h3>
@@ -285,10 +303,9 @@
             <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
         </p>
+
         <hr>
-        <p>
-            <a href="github.com"></a>
-        </p>
+
     </main>
 </body>
 
