--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <hr>
         <h2>Hoe kan je een film beïnvloeden met muziek?</h2>
         <hr>
+        <img src="res/afbeeldingen/howardshore.jpg" alt="">
+        <hr>
         <h3 style="text-align:left">Inhoud</h3>
         <nav>
             <ul>
@@ -55,14 +57,7 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi vitae sapien mattis scelerisque.
             Curabitur mattis nisi eget velit facilisis sagittis. Fusce magna magna, hendrerit non luctus at, dapibus
-            dapibus magna. Aenean semper magna at est congue convallis. Cras eleifend ultricies lacus, at sodales mi
-            elementum a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-            Donec
-            sed massa dapibus, molestie diam sed, tincidunt felis. Etiam aliquet felis lectus, at bibendum est
-            aliquet
-            sit amet. Fusce ut ipsum scelerisque, tristique nunc vitae, dignissim nulla. Pellentesque ipsum magna,
-            consequat id commodo id, vestibulum in odio. Vivamus ut fringilla lectus. Maecenas facilisis, ex eget
-            consequat dignissim, neque urna tincidunt diam, eu malesuada felis massa sit amet nunc.
+            dapibus magna. Aenean semper magna at est congue convallis.
         </p>
 
         <hr>
@@ -75,10 +70,6 @@
             euismod. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec maximus massa a elit
             pellentesque imperdiet. Etiam non gravida dolor, pellentesque mollis nisi. Pellentesque ac maximus
             lectus.
-            Curabitur ultricies ac orci eu varius. Praesent vitae eros nibh. Vestibulum ante ipsum primis in
-            faucibus
-            orci luctus et ultrices posuere cubilia curae; Suspendisse ornare viverra mattis. In sollicitudin leo
-            sollicitudin, mattis magna sit amet, feugiat diam.
         </p>
         <p>
         <h4 id="IHCPVDNT">Is het compositie process veranderd door nieuwe technologie?</h4>
@@ -86,8 +77,6 @@
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
         </p>
 
         <p>
@@ -97,27 +86,17 @@
             accumsan
             non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
             ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
-            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat
-            rhoncus.
-            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
-            pulvinar ac lorem id, congue venenatis metus.
         </p>
         <h4 id="HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende filmgenres?</h4>
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
         </p>
         <p>
             Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis sit
             amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio, accumsan
             non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
-            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
-            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat rhoncus.
-            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
-            pulvinar ac lorem id, congue venenatis metus.
         </p>
 
         <h4 id="WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</h4>
@@ -125,8 +104,6 @@
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
         </p>
         <p>
             Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
@@ -135,10 +112,6 @@
             accumsan
             non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
             ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
-            justo. Phasellus fermentum pharetra lectus sit amet consequat. Aliquam feugiat mauris a volutpat
-            rhoncus.
-            Morbi vel mollis tortor. Donec nec tincidunt mi. Nunc blandit aliquet mauris a faucibus. Sed diam enim,
-            pulvinar ac lorem id, congue venenatis metus.
         </p>
 
         <hr>
@@ -147,25 +120,9 @@
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
         </p>
         <h4 id="WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</h4>
         <p>
-            <span style="font-weight: bolder;">Blijdschap</span><br>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-            <br>
-            <br>
-            <span style="font-weight: bolder;">Verdriet</span><br>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-            <br>
-            <br>
-            <span style="font-weight: bolder;">Spanning en Angst</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
@@ -174,19 +131,6 @@
         </p>
         <h4 id="HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</h4>
         <p>
-            <span style="font-weight: bolder;">Blijdschap</span><br>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-            <br>
-            <br>
-            <span style="font-weight: bolder;">Verdriet</span><br>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-            <br>
-            <br>
-            <span style="font-weight: bolder;">Spanning en Angst</span><br>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
@@ -279,12 +223,12 @@
         <p>
             <div class="audio_bijlage">
                 <audio controls src=""></audio>
-                <div>Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+                <div>Muziekfragment<span style="font-style: italic;"></span></div>
             </div>
             <br>
             <div class="audio_bijlage">
                 <audio controls src=""></audio>
-                <div>Geluidsfragment uit <span style="font-style: italic;">Psycho 1966</span></div>
+                <div>Muziekfragment<span style="font-style: italic;"></span></div>
             </div>
         </p>
 
@@ -302,6 +246,7 @@
             <span style="font-weight: bold;">Week 39:</span> 2 uur ideeën bedenken op de piano<br>
             <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
+            <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
         </p>
 
         <hr>
