--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Liam Creed</h2>
         <h3 style="text-align: center;">6vwo 2024</h3>
         <hr>
-        <h2>Hoe kan je een film beïnvloeden met muziek?</h2>
+        <h2>Kan de onderliggende filmmuziek een scene anders laten voelen?</h2>
         <hr>
         <img src="res/afbeeldingen/howardshore.jpg" alt="">
         <hr>
@@ -36,12 +36,10 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#HKJEBMMIF">Hoe kan je emoties beïnvloeden met muziek in film?</a>
+                    <a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
                     <ul>
                         <li><a href="#WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
                         <li><a href="#HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</a></li>
-                        <li><a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
-                        </li>
                     </ul>
                 </li>
                 <li><a href="#CONCLUSIE">Conclusie</a></li>
@@ -116,7 +114,7 @@
 
         <hr>
 
-        <h3 id="HKJEBMMIF">Hoe kan je emoties beïnvloeden met muziek in film?</h3>
+        <h3 id="KDOFMESALV">Hoe kan je emoties beïnvloeden met muziek in film?</h3>
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
@@ -134,14 +132,6 @@
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
             interdum quam hendrerit.
-        </p>
-        <h4 id="KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</h4>
-        <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-            urna, tincidunt in est quis, tempus fringilla tortor. Curabitur euismod ante non tristique egestas. Sed
-            vitae vehicula magna, sed sagittis urna.
         </p>
 
         <hr>
