--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <hr>
 
-        <h3 id="KDOFMESALV">Hoe kan je emoties beïnvloeden met muziek in film?</h3>
+        <h3 id="KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</h3>
         <p>
             Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
             Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
@@ -170,13 +170,13 @@
             Princess Mononoke – Joe Hisaishi <br>
         </p>
         <p style="font-style: italic;">
-            <a href="">Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes</a>
-            <br>
-            <br>
             <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">Native Instruments. (2021, April 13).
                 Alan Silvestri
                 Breaks Down the Composing Workflow Behind his
                 Blockbuster Scores | Native Instruments [Video]. YouTube.</a>
+            <br>
+            <br>
+            <a href="">Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes</a>
             <br>
             <br>
             <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">Mix with the Masters. (2020, July 17).
