--- a/index.html
+++ b/index.html
@@ -25,21 +25,20 @@
             <ul>
                 <li><a href="#INLEIDING">Inleiding</a></li>
                 <li>
-                    <a href="#HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</a>
+                    <a href="#1">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
-                        <li><a href="#IHCPVDNT">Is het compositie proces veranderd door nieuwe technologie?</a></li>
-                        <li><a href="#WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
-                                filmmuziek?</a>
-                        </li>
-                        <li><a href="#HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende
-                                filmgenres?</a></li>
+                        <li><a href="#1a">Hoe gaan componisten van start met het schrijven van filmmuziek?</a></li>
+                        <li><a href="#1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film muziek?</a></li>
+                        <li><a href="#1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
+                    <a href="#2">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
                     <ul>
-                        <li><a href="#WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
-                        <li><a href="#HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</a></li>
+                        <li><a href="#2a">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
+                        <li><a href="#2b">Welke technieken worden gebruikt om deze emoties te creëren met
+                                filmmuziek?</a></li>
+                        <li><a href="#2c">Hoe veel invloed heeft de filmmuziek bij een film scene?</a></li>
                     </ul>
                 </li>
                 <li><a href="#CONCLUSIE">Conclusie</a></li>
@@ -53,97 +52,30 @@
 
         <h3 id="INLEIDING">Inleiding</h3>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi vitae sapien mattis scelerisque.
-            Curabitur mattis nisi eget velit facilisis sagittis. Fusce magna magna, hendrerit non luctus at, dapibus
-            dapibus magna. Aenean semper magna at est congue convallis.
         </p>
 
         <hr>
 
-        <h3 id="HGHCPVBFC">Hoe gaat het compositie proces van bekende film componisten?</h3>
+        <h3 id="1">Hoe gaat het compositie proces van film componisten?</h3>
         <p>
-            Etiam sit amet varius nisl. Fusce in cursus tortor. In hac habitasse platea dictumst. Suspendisse
-            faucibus
-            aliquam aliquet. Mauris pulvinar congue lectus, eget tincidunt nisl. Sed id mauris nec ante tincidunt
-            euismod. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec maximus massa a elit
-            pellentesque imperdiet. Etiam non gravida dolor, pellentesque mollis nisi. Pellentesque ac maximus
-            lectus.
-        </p>
-        <p>
-        <h4 id="IHCPVDNT">Is het compositie process veranderd door nieuwe technologie?</h4>
-        <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
         </p>
 
+        <h4 id="1a">Hoe gaan componisten van start met het schrijven van filmmuziek?</h4>
         <p>
-            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
-            sit
-            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
-            accumsan
-            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
-            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
-        </p>
-        <h4 id="HVDFEHPIVF">Hoe verschilt de filmmuziek en het proces in verschillende filmgenres?</h4>
-        <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-        </p>
-        <p>
-            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis sit
-            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio, accumsan
-            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
         </p>
 
-        <h4 id="WZODJTKKTHSVF">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</h4>
+        <h4 id="1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film muziek?</h4>
         <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit. Nulla feugiat tempor nunc vitae molestie. Duis ut ultrices lectus. Fusce nulla
-        </p>
-        <p>
-            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
-            sit
-            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
-            accumsan
-            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
-            ullamcorper turpis. Donec vitae pellentesque erat. Ut a elit ultricies nisl gravida commodo sit amet at
         </p>
 
-        <hr>
-
-        <h3 id="KDOFMESALV">Kan de onderliggende filmmuziek een scene anders laten voelen?</h3>
+        <h4 id="1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</h4>
         <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
         </p>
-        <h4 id="WEKJBMMIF">Welke emoties kan je beïnvloeden met muziek in film?</h4>
-        <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-        </p>
-
-        </p>
-        <h4 id="HKJDECMMIF">Hoe kan je deze emoties creëren met muziek in film?</h4>
-        <p>
-            Donec tellus enim, laoreet a ultricies vel, dapibus id tortor. Sed ultrices molestie felis ut faucibus.
-            Curabitur semper lorem nunc, at bibendum nisi tempor vel. Etiam interdum ipsum sed dolor molestie, et
-            interdum quam hendrerit.
-        </p>
-
+       
         <hr>
 
         <h3 id="CONCLUSIE">Conclusie</h3>
         <p>
-            Nam lacinia sit amet orci vulputate rutrum. Donec suscipit sit amet leo sed auctor. Aenean mollis, felis
-            sit
-            amet volutpat congue, felis justo tincidunt justo, ac facilisis nulla purus in leo. In nisl odio,
-            accumsan
-            non bibendum eget, bibendum eget massa. Duis dui lectus, tristique eu felis placerat, scelerisque
-            ullamcorper turpis.
         </p>
 
         <hr>
@@ -151,59 +83,53 @@
         <h3 id="BRONNEN">Bronnen</h3>
         <p>
             <span style="font-weight: bold;">Films:</span> <br>
-            Interstellar – Hans Zimmer <br>
             Dunkirk – Hanz Zimmer<br>
             Dune – Hans Zimmer <br>
             Halloween – John Carpenter <br>
-            Tron – Wendy Carlos <br>
             The Shining – Wendy Carlos & Rachel Elkind <br>
             Tenet – Ludwig Goransson <br>
             Oppenheimer – Ludwig Goransson <br>
-            Blade Runner – Vangelis <br>
-            Blade Runner 2049 - Hans Zimmer <br>
             La la land – Justin Hurwitz <br>
             Schindler’s List – John Williams <br>
-            Taxi Driver – Bernard Hermann <br>
             Lord of the Rings – Howard Shore <br>
+            The Thing – Ennio Morricone <br>
             Once Upon a Time in the West – Ennio Morricone <br>
             Amélie – Yann Tiersen <br>
-            Princess Mononoke – Joe Hisaishi <br>
         </p>
         <p style="font-style: italic;">
-            <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">Native Instruments. (2021, April 13).
-                Alan Silvestri
-                Breaks Down the Composing Workflow Behind his
-                Blockbuster Scores | Native Instruments [Video]. YouTube.</a>
-            <br>
-            <br>
-            <a href="">Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes</a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">Mix with the Masters. (2020, July 17).
-                Writing to
-                picture with Hans Zimmer [Video]. YouTube.</a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=Ib4BHU0J-dA" target="_blank">Collider Interviews. (2023, July 28).
-                Oppenheimer
-                Interview: Composer Ludwig Göransson [Video]. YouTube.</a>
-            <br>
-            <br>
-            <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
-                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores |
-                Critical breakthroughs [Video]. YouTube.
+            <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">
+                Native Instruments. (2021, April 13). Alan Silvestri Breaks Down the Composing Workflow Behind his Blockbuster Scores | Native Instruments [Video]. YouTube.
             </a>
             <br>
             <br>
-            <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">Variety. (2020, August 13). How “The
-                Mandalorian”
-                Score Found The New “Star Wars” Sound [Video]. YouTube.</a>
+            <a href="" target="_blank">
+                Lord of the Rings Extended edition. (2001, December 19). Lord of the Rings behind the scenes
+            </a>
             <br>
             <br>
-            <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">Vanity Fair. (2022, March 17). How
-                “Dune” composer
-                Hans Zimmer created the Oscar-Winning score | Vanity
-                Fair[Video]. YouTube. </a>
+            <a href="https://www.youtube.com/watch?v=sj2PdzPzyYY" target="_blank">
+                Mix with the Masters. (2020, July 17). Writing to picture with Hans Zimmer [Video]. YouTube.
+            </a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=Ib4BHU0J-dA" target="_blank">
+                Collider Interviews. (2023, July 28). OppenheimerInterview: Composer Ludwig Göransson [Video]. YouTube.
+            </a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
+                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores | Critical breakthroughs [Video]. YouTube.
+            </a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">
+                Variety. (2020, August 13). How “The Mandalorian” Score Found The New “Star Wars” Sound [Video]. YouTube.
+            </a>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">
+                Vanity Fair. (2022, March 17). How “Dune” composer  Hans Zimmer created the Oscar-Winning score | Vanity Fair[Video]. YouTube. 
+            </a>
             <br>
         </p>
 
@@ -211,15 +137,15 @@
 
         <h3 id="MUZIEK">Muziek</h3>
         <p>
-            <div class="audio_bijlage">
-                <audio controls src=""></audio>
-                <div>Muziekfragment<span style="font-style: italic;"></span></div>
-            </div>
-            <br>
-            <div class="audio_bijlage">
-                <audio controls src=""></audio>
-                <div>Muziekfragment<span style="font-style: italic;"></span></div>
-            </div>
+        <div class="audio_bijlage">
+            <audio controls src=""></audio>
+            <div>Muziekfragment<span style="font-style: italic;"></span></div>
+        </div>
+        <br>
+        <div class="audio_bijlage">
+            <audio controls src=""></audio>
+            <div>Muziekfragment<span style="font-style: italic;"></span></div>
+        </div>
         </p>
 
         <hr>
@@ -237,6 +163,7 @@
             <span style="font-weight: bold;">Week 39:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
+            <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
         </p>
 
         <hr>
