--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="nl">
 
+<!-- 
+    ONTHOUDEN: Referenties naar mensen als je iets zegt
+ -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +20,7 @@
         <h2>Liam Creed</h2>
         <h3 style="text-align: center;">6vwo 2024</h3>
         <hr>
-        <h2>Kan de onderliggende filmmuziek een scene anders laten voelen?</h2>
+        <h2>Hoe kan je met filmmuziek een scene anders laten voelen?</h2>
         <hr>
         <img src="res/afbeeldingen/howardshore.jpg" alt="">
         <hr>
@@ -28,17 +32,21 @@
                     <a href="#1">Hoe gaat het compositie proces van bekende film componisten?</a>
                     <ul>
                         <li><a href="#1a">Hoe gaan componisten van start met het schrijven van filmmuziek?</a></li>
-                        <li><a href="#1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film muziek?</a></li>
-                        <li><a href="#1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</a></li>
+                        <li><a href="#1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film
+                                muziek?</a></li>
+                        <li><a href="#1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van
+                                filmmuziek?</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#2">Kan de onderliggende filmmuziek een scene anders laten voelen?</a>
+                    <a href="#2">Hoe kan je met filmmuziek een scene anders laten voelen?</a>
                     <ul>
-                        <li><a href="#2a">Welke emoties kan je beïnvloeden met muziek in film?</a></li>
-                        <li><a href="#2b">Welke technieken worden gebruikt om deze emoties te creëren met
-                                filmmuziek?</a></li>
-                        <li><a href="#2c">Hoe veel invloed heeft de filmmuziek bij een film scene?</a></li>
+                        <li><a href="">Hoe beinvloed de toonsoort en toonhoogte een filmscene?</a></li>
+                        <li><a href="">Hoe beinvloed het tempo een filmscene?</a></li>
+                        <li><a href="">Hoe beinvloed timbre een filmscene?</a></li>
+                        <li><a href="">Hoe beinvloed toonsterkte en dynamiek een filmscene??</a></li>
+                        <li><a href="">Hoe beinvloed het gebruik van stilte een filmscene?</a></li>
+                        <li><a href="">Hoe kan je deze muzikale begrippen samen gebruiken om een film scene anders te laten voelen?</a></li>
                     </ul>
                 </li>
                 <li><a href="#CONCLUSIE">Conclusie</a></li>
@@ -56,24 +64,6 @@
 
         <hr>
 
-        <h3 id="1">Hoe gaat het compositie proces van film componisten?</h3>
-        <p>
-        </p>
-
-        <h4 id="1a">Hoe gaan componisten van start met het schrijven van filmmuziek?</h4>
-        <p>
-        </p>
-
-        <h4 id="1b">Welke technologie wordt gebruikt tijdens het compositie proces voor film muziek?</h4>
-        <p>
-        </p>
-
-        <h4 id="1c">Wat zijn obstakels die je tegen kan komen tijdens het schrijven van filmmuziek?</h4>
-        <p>
-        </p>
-       
-        <hr>
-
         <h3 id="CONCLUSIE">Conclusie</h3>
         <p>
         </p>
@@ -83,22 +73,26 @@
         <h3 id="BRONNEN">Bronnen</h3>
         <p>
             <span style="font-weight: bold;">Films:</span> <br>
-            Dunkirk – Hanz Zimmer<br>
-            Dune – Hans Zimmer <br>
-            Halloween – John Carpenter <br>
-            The Shining – Wendy Carlos & Rachel Elkind <br>
-            Tenet – Ludwig Goransson <br>
-            Oppenheimer – Ludwig Goransson <br>
-            La la land – Justin Hurwitz <br>
-            Schindler’s List – John Williams <br>
-            Lord of the Rings – Howard Shore <br>
-            The Thing – Ennio Morricone <br>
-            Once Upon a Time in the West – Ennio Morricone <br>
-            Amélie – Yann Tiersen <br>
+            <span style="font-style: italic;">
+                Dunkirk – Hanz Zimmer<br>
+                Dune – Hans Zimmer <br>
+                Halloween – John Carpenter <br>
+                The Shining – Wendy Carlos & Rachel Elkind <br>
+                Tenet – Ludwig Goransson <br>
+                Oppenheimer – Ludwig Goransson <br>
+                La la land – Justin Hurwitz <br>
+                Schindler’s List – John Williams <br>
+                Lord of the Rings – Howard Shore <br>
+                The Thing – Ennio Morricone <br>
+                Once Upon a Time in the West – Ennio Morricone <br>
+                Amélie – Yann Tiersen <br>
+            </span>
         </p>
+
         <p style="font-style: italic;">
             <a href="https://www.youtube.com/watch?v=La6R97pahR8" target="_blank">
-                Native Instruments. (2021, April 13). Alan Silvestri Breaks Down the Composing Workflow Behind his Blockbuster Scores | Native Instruments [Video]. YouTube.
+                Native Instruments. (2021, April 13). Alan Silvestri Breaks Down the Composing Workflow Behind his
+                Blockbuster Scores | Native Instruments [Video]. YouTube.
             </a>
             <br>
             <br>
@@ -118,17 +112,20 @@
             <br>
             <br>
             <a href="https://www.youtube.com/watch?v=GW53-eaDz8M" target="_blank">
-                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores | Critical breakthroughs [Video]. YouTube.
+                Pitchfork. (2021, April 13). Mandalorian composer Ludwig Göransson breaks down his movie & TV scores |
+                Critical breakthroughs [Video]. YouTube.
             </a>
             <br>
             <br>
             <a href="https://www.youtube.com/watch?v=aQIcZbzr9Wk" target="_blank">
-                Variety. (2020, August 13). How “The Mandalorian” Score Found The New “Star Wars” Sound [Video]. YouTube.
+                Variety. (2020, August 13). How “The Mandalorian” Score Found The New “Star Wars” Sound [Video].
+                YouTube.
             </a>
             <br>
             <br>
             <a href="https://www.youtube.com/watch?v=93A1ryc-WW0" target="_blank">
-                Vanity Fair. (2022, March 17). How “Dune” composer  Hans Zimmer created the Oscar-Winning score | Vanity Fair[Video]. YouTube. 
+                Vanity Fair. (2022, March 17). How “Dune” composer Hans Zimmer created the Oscar-Winning score | Vanity
+                Fair[Video]. YouTube.
             </a>
             <br>
         </p>
@@ -164,6 +161,25 @@
             <span style="font-weight: bold;">Week 40:</span> 1 uur website maken voor PWS<br>
             <span style="font-weight: bold;">Week 40:</span> 30 minuten gesprek met Desiree Ceulemans<br>
             <span style="font-weight: bold;">Week 40:</span> 1 uur deelonderwerpen aanpassen<br>
+        </p>
+
+        <hr>
+
+        <h3 id="PLANNING">Planning</h3>
+        <p>
+            <span style="font-weight: bold;">Week 42:</span> <br>
+            <span style="font-weight: bold;">Week 43:</span> Filmmuziek emotie deelvragen <br>
+            <span style="font-weight: bold;">Week 44:</span> Filmmuziek emotie deelvragen <br>
+            <span style="font-weight: bold;">Week 45:</span> Filmmuziek emotie deelvragen <br>
+            <span style="font-weight: bold;">Week 46:</span> Filmmuziek emotie deelvragen <br>
+            <span style="font-weight: bold;">Week 47:</span> Starten met compositie en die deelvragen beantwoorden <br>
+            <span style="font-weight: bold;">Week 48:</span> <br>
+            <span style="font-weight: bold;">Week 49:</span> Onderzoek Afronden <br>
+            <span style="font-weight: bold;">Week 50:</span> Producten Maken <br>
+            <span style="font-weight: bold;">Week 51:</span> Producten Maken <br>
+            <span style="font-weight: bold;">Week 52:</span> Product(en) afronden <br>
+            <span style="font-weight: bold;">Week 01:</span> Laatste dingetjes doen<br>
+            <span style="font-weight: bold;">Week 02:</span> Inleveren PWS <br>
         </p>
 
         <hr>
